--- a/leftbar.html
+++ b/leftbar.html
@@ -6,20 +6,10 @@
 
 
   <body bgcolor="#800000">
-    <font color="#FFFDD0">
-      <b>testing 123</b>
-    </font>
-      
-    <font color = "#FFFDD0">
-      <font size=14>
-        <b>
-        font size testing 123
-        <br>
-        <br>
-        after line spacing, hopefully
-        </b>
-      </font>
-    </font>
+    <a href="homepage.html" target="visibleframe">Home</a>
+    <br>
+    <a href="examplepage1.html" target="visibleframe">Example Page</a>
+    <br>
 
   </body>
 </html>
