--- a/leftbar.html
+++ b/leftbar.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-
-  </head>
-
-
+  <head></head>
+  
   <body bgcolor="#800000">
     <a href="homepage.html" target="visibleframe">Home</a>
     <br>
     <a href="examplepage1.html" target="visibleframe">Example Page</a>
     <br>
-
   </body>
 </html>
