--- a/leftbar.html
+++ b/leftbar.html
@@ -5,7 +5,7 @@
   <body bgcolor="#800000">
     <a href="homepage.html" target="visibleframe">Home</a>
     <br>
-    <a href="examplepage1.html" target="visibleframe">Example Page</a>
+    <a href="examplepage1.html" target="visibleframe">Example_Page</a>
     <br>
   </body>
 </html>
