--- a/examplepage1.html
+++ b/examplepage1.html
@@ -16,6 +16,9 @@
       <u>This is underlined text</u>
       <br>
       <br>
+      <b><u><i>This is boldfaced, underlined, and italicized</i></u></b>
+      <br>
+      <br>
     </font>
     
     <font size=14>
