--- a/homepage.html
+++ b/homepage.html
@@ -4,17 +4,15 @@
   
   <body bgcolor="#FFFDD0">
     <font color="#800000">
-      <b>This should show in the home page</b>
-    </font>
+      This should show in the home page
+      <br>
+      <br>
       
-    <font color = "#FFFDD0">
       <font size=14>
-        <b>
         Home page testing body text
         <br>
         <br>
         after line spacing, hopefully, again
-        </b>
       </font>
     </font>
 
