--- a/homepage.html
+++ b/homepage.html
@@ -2,8 +2,8 @@
 <html>
   <head></head>
   
-  <body bgcolor="#FFFDD0">
-    <font color="#800000">
+  <body bgcolor="#D7CEC7">
+    <font color="#76323F">
       This should show in the home page
       <br>
       <br>
