--- a/leftbar.html
+++ b/leftbar.html
@@ -2,10 +2,13 @@
 <html>
   <head></head>
   
-  <body bgcolor="#800000">
-    <a href="homepage.html" target="visibleframe">Home</a>
-    <br>
-    <a href="examplepage1.html" target="visibleframe">Example_Page</a>
-    <br>
+  <body bgcolor="565656">
+    <font color="D7CEC7">
+      <a href="homepage.html" target="visibleframe">Home</a>
+      <br>
+      <br>
+      <a href="examplepage1.html" target="visibleframe">Example_Page</a>
+      <br>
+    </font>
   </body>
 </html>
