--- a/leftbar.html
+++ b/leftbar.html
@@ -2,8 +2,8 @@
 <html>
   <head></head>
   
-  <body bgcolor="565656">
-    <font color="D7CEC7">
+  <body bgcolor="#565656">
+    <font color="#D7CEC7">
       <a href="homepage.html" target="visibleframe">Home</a>
       <br>
       <br>
