--- a/examplepage1.html
+++ b/examplepage1.html
@@ -21,7 +21,7 @@
       <br>
     </font>
     
-    <font size=14>
+    <font size=14 color="#76323F">
       testing body text for the example page
       <br>
       <br>      
