--- a/leftbar.html
+++ b/leftbar.html
@@ -2,7 +2,7 @@
 <html>
   <head></head>
   
-  <body bgcolor="#565656">
+  <body bgcolor="#76323F">
     <font color="#D7CEC7">
       <a href="homepage.html" target="visibleframe">Home</a>
       <br>
