--- a/frame_b.html
+++ b/frame_b.html
@@ -35,7 +35,7 @@
 	<br>
 	<br>
 	
-	<font color="#565656" face="Arial" size="">
+	<font color="White" face="Arial" size="">
 		<script>
 			var date = document.lastModified;
 			document.write("Last Modified "+date);
