--- a/frame_a.html
+++ b/frame_a.html
@@ -22,7 +22,7 @@
 		<img src="https://www.clipartmax.com/png/full/6-67609_transparent-chefs-hats-clipart-chef-hat-png.png" alt="CCCC Logo" width=100 height=75>
 	</center>
 	<br>
-    <font color="#D7CEC7" size="+1">
+    <font color="#D7CEC7" size="+1" face="Arial">
       <a href="frame_b.html" target="showframe">Home</a>
       <br>
 	  <br>
