--- a/frame_a.html
+++ b/frame_a.html
@@ -21,39 +21,39 @@
 	<center>
 		<img src="https://www.clipartmax.com/png/full/6-67609_transparent-chefs-hats-clipart-chef-hat-png.png" alt="CCCC Logo" width=100 height=75>
 	</center>
-	<br>
+	<br/>
     <font color="#D7CEC7" size="+1" face="Arial">
       <a href="frame_b.html" target="showframe">Home</a>
-      <br>
-	  <br>
+      <br/>
+	  <br/>
 	  <a href="MgmtTeam.html" target="showframe">Management Team</a>
-	  <br>
-      <br>
+	  <br/>
+      <br/>
 	  <a href="History.html" target="showframe">Company History</a>
-	  <br>
-	  <br>
+	  <br/>
+	  <br/>
 	  <a href="Products.html" target="showframe">Products</a>
-	  <br>
-	  <br>
+	  <br/>
+	  <br/>
 	  <a href="Services.html" target="showframe">Services</a>
-	  <br>
-	  <br>
+	  <br/>
+	  <br/>
 	  <a href="Reviews.html" target="showframe">Reviews</a>
-	  <br>
-	  <br>
+	  <br/>
+	  <br/>
     </font>
 	
-	<br>
-	<br>
-	<br>
+	<br/>
+	<br/>
+	<br/>
 	
-	<font color="#D7CEC7" face="Arial" size="">
+	<font color="#D7CEC7" face="Arial">
 		Last Modified:
 		<script>document.write( document.lastModified );</script>
 	</font>
 	
-	<br>
-	<br>
+	<br/>
+	<br/>
 	
   </body>
 </html>
