--- a/MgmtTeam.html
+++ b/MgmtTeam.html
@@ -4,10 +4,10 @@
 
 	<body bgcolor="#D7CEC7">
 
-		<br>
+		<br/>
 		<center>
 		<img src="https://www.clipartmax.com/png/full/6-67609_transparent-chefs-hats-clipart-chef-hat-png.png" alt="CCCC Logo" width=100 height=75>
-		<br>
+		<br/>
 		<h1><font face="Arial" color="#76323F" size="+5">Our Management Team</font></h1>
 		<p><font face="Georgia" color="#565656" size="+2">
 			Our team here at 
@@ -17,7 +17,7 @@
 		</font></p>
 		</center>
 
-		<br>
+		<br/>
 		
 		<center>
 			<img src="https://2f35da97a9ad36d49db6-4d1987fef3a36cccd5478db4931039f0.ssl.cf3.rackcdn.com/assets/media/2019/07/FIE-banner-events-page-1000x305.jpg" alt="Food array" width=1000 height=305>
@@ -34,12 +34,12 @@
 				the meal planning, flavor profiling, learning new techniques.
 				She wants to help build other's confidence in their cooking skills.
 			</font></p>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
 			
 			<img src="https://media.istockphoto.com/photos/confident-chef-standing-arms-crossed-in-kitchen-picture-id877309720?k=20&m=877309720&s=612x612&w=0&h=R1AM72IPeBZR_nZ5OxIb7H5IOGSpKqtHBRi5AEF5ndE=" alt="Chris" width="306" height="204" align="right">
 			<h3><font face="Arial" color="#C09F80" size="+2">Chris Cook</font></h3>
@@ -49,11 +49,11 @@
 				Ever since he joined Christie on the venture of opening the Cooking Cabin, he has only felt his cooking capabilities improve.
 				He hopes to continue to grow the company and prove that anyone can cook.
 			</font></p>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
 		
 		
 		<h2><font face="Arial" color="#76323F" size="+3">Manager(s)</font></h2>
@@ -63,8 +63,8 @@
 				The skills she's developed and the time she's spent with us are invaluable and we're thankful she's with us.
 				Kena is also one of our class instructors, and is confident and capable to make people the cook they want to be.
 			</font></p>
-		<br>
-		<br>
+		<br/>
+		<br/>
 		
 		
 		<h2><font face="Arial" color="#76323F" size="+3">Employee(s)</font></h2>
@@ -74,7 +74,7 @@
 				She used to just help in the background in her own way, but she's one of the team now, and we're so glad to have her.
 				Look forward to meeting her as a guest teacher if you sign up for our weeklong class!
 			</font></p>
-			<br>
+			<br/>
 			
 			<h3><font face="Arial" color="#C09F80" size="+2">Blair</font></h3>
 			<p><font face="Georgia" color="#565656" size="+1">
@@ -82,16 +82,16 @@
 				We were nervous to expand outside of family and close friends, but Blair's contribution have been phenominal.
 				She is excited to help out every day, and we're always asking for and implementing feedback to be a better workplace for our employees.
 			</font></p>
-			<br>
+			<br/>
 			
 			<h3><font face="Arial" color="#C09F80" size="+2">Lydia</font></h3>
 			<p><font face="Georgia" color="#565656" size="+1">
 				A recent addition to the team that has fantastic skill. 
 				She is on track to be one of our teachers given her capabilities, and we're excited for what's next with her on our team.
 			</font></p>
-		<br>
-		<br>
-		
+			
+		<br/>
+		<br/>
 		
 		<h2><font face="Arial" color="#76323F" size="+3">Employment Inquiries</font></h2>
 		<p><font face="Georgia" color="#565656" size="+1">
@@ -105,7 +105,9 @@
 				<li>Label shipments</li>
 				<li>Pack and seal deliveries</li>
 			</ul>
-			<br>
+			
+			<br/>
+			
 		<h3><font face="Arial" color="#C09F80" size="+2">Next Steps</font></h3>
 			<p><font face="Georgia" color="#565656" size="+1">
 				If you are still interested, follow the next steps below:
@@ -114,24 +116,25 @@
 			<ol style="font-size:20px; color:#565656; face:Georgia">
 				<li>Make a resume</li>
 				<li>Send your resume <i>in pdf format</i> 
-					(<a href="Resume_Michael Gospodarek.docx" download>example resume</a>)
+					(<a href="Resume_Michael Gospodarek.docx">example resume</a>)
 					to our management team's
 					<a href="mailto:mgospoda@purdue.edu">email</a></li>
 				<li>Wait to hear back (estimated 1-2 weeks)</li>
 			</ol>
 			
-			<br>
+			<br/>
+			
 			<p><font face="Georgia" color="#565656" size="+1">
 				If you don't hear back from us, consider applying to our partnered company, 
 				<a href="https://discover.escoffier.edu/?category=PPC&source=Google&campaign=online%20cooking%20classes&gclid=Cj0KCQiAuvOPBhDXARIsAKzLQ8Gdqway5_it45TmHN-EXlLibAMpm5cDC6Ep-eqqslALhOqIeLlhXqEaAjv-EALw_wcB" target="_blank">Escoffier</a>
 			</font></p>
 		
-		<br>
-		<br>
-		<br>
+		<br/>
+		<br/>
+		<br/>
 		
 		<p align="right">
-		<font color="White" face="Arial" size="">
+		<font color="White" face="Arial">
 			Last Modified:
 			<script>document.write( document.lastModified );</script>
 		</font>
