--- a/Services.html
+++ b/Services.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -5,7 +6,7 @@
 
 <body bgcolor = "#D7CEC7">
 
-<br>
+<br/>
 <center>
 	<img src="https://www.clipartmax.com/png/full/6-67609_transparent-chefs-hats-clipart-chef-hat-png.png" width=100 height=75>
 <center>
@@ -14,12 +15,12 @@
 <h1 style="font-family:Arial;color:#76323F"><font size="+5"><center> Cooking Cabin Services </center></font></h1>
 
 <p style="color:#565656;font-family:Brush Script MT;font-size: 30px">Here at the Cooking Cabin, we offer a multitude of services in the form of cooking classes! Choose from a wide variety of teachers, who specialized in different techniques and ethnicities of food. Here, you can learn from our skilled staff how to be a better cook. </p>
-<br> 
+<br/> 
 
 <center>
 <img src = "https://english.visitseoul.net/comm/getImage?srvcId=MEDIA&parentSn=15242&fileTy=MEDIA&fileNo=2" alt="Our Products" width="750" height="550" align ="center" >
 </center>
-<br>
+<br/>
 
 <h2 style="font-family:Arial;color:#76323F"><b><u><center> One-Session Classes </center></u></b></h2>
 
@@ -43,15 +44,15 @@
 	<li>Friday - Bringing it all together</li>
 	<li>Saturday - the culminating event where you put what you've learned together to make a course.</li>
 </ol>
-<br>
+<br/>
 
 <p>If the courses you would like to take are full, consider taking online courses with <a href="https://discover.escoffier.edu/?category=PPC&source=Google&campaign=online%20cooking%20classes&gclid=Cj0KCQiAuvOPBhDXARIsAKzLQ8HlAXGFSSm6ZTzNeiPJ6M6VrWq9NnUOaHUUoL4r5uvzm3JkvIvZcO4aAswfEALw_wcB" target="_blank">Escoffier</a></p>
 
 <a href ="Cooking Class Schedue.xlsx">Click to download the course schedule of Christie and Chris's Cooking Cabin</a>
 
-<br>
-<br>
-<br>
+<br/>
+<br/>
+<br/>
 
 <font color="White" face="Arial" size="">
 	Last Modified:
