--- a/MgmtTeam.html
+++ b/MgmtTeam.html
@@ -57,7 +57,7 @@
 		
 		
 		<h2><font face="Arial" color="#76323F" size="+3">Manager(s)</font></h2>
-			<h3><font face="Arial" color="#C09F80" size="+2">Kena</font></h3>
+			<h3><font face="Arial" color="#C09F80" size="+2">Jane</font></h3>
 			<p><font face="Georgia" color="#565656" size="+1">
 				She was first brought onto the team after being a regular customer for years.
 				The skills she's developed and the time she's spent with us are invaluable and we're thankful she's with us.
@@ -68,9 +68,9 @@
 		
 		
 		<h2><font face="Arial" color="#76323F" size="+3">Employee(s)</font></h2>
-			<h3><font face="Arial" color="#C09F80" size="+2">Anil</font></h3>
+			<h3><font face="Arial" color="#C09F80" size="+2">Angela</font></h3>
 			<p><font face="Georgia" color="#565656" size="+1">
-				Anil has been around the company for a very long time, but has just recently joined us officially. 
+				Angela has been around the company for a very long time, but has just recently joined us officially. 
 				She used to just help in the background in her own way, but she's one of the team now, and we're so glad to have her.
 				Look forward to meeting her as a guest teacher if you sign up for our weeklong class!
 			</font></p>
@@ -84,10 +84,10 @@
 			</font></p>
 			<br/>
 			
-			<h3><font face="Arial" color="#C09F80" size="+2">Lydia</font></h3>
+			<h3><font face="Arial" color="#C09F80" size="+2">Mark</font></h3>
 			<p><font face="Georgia" color="#565656" size="+1">
 				A recent addition to the team that has fantastic skill. 
-				She is on track to be one of our teachers given her capabilities, and we're excited for what's next with her on our team.
+				He is on track to be one of our teachers given his capabilities, and we're excited for what's next with him on our team.
 			</font></p>
 			
 		<br/>
