--- a/Reviews.html
+++ b/Reviews.html
@@ -17,13 +17,11 @@
 </center>
 <br>
 <br>
-<left>
 <h1> 
 <center>
   <font color = "White" ><font face = "Brush Script MT" ><font size = "14" > Our Customers </font></font></font>
 </center>
 </h1>  
-</left>
 <u>
   <font color = "Black"><font face = "Arial"><font size = "6"> Betty Baker</font></font></font>
 </u>
@@ -81,7 +79,7 @@
 <br>
 <a href="mailto:mgospoda@purdue.edu">Email Us!</a>
 <br>
-<a href ="C&C Cooking Cabin.jpg" download> Download Here</a>
+<a href ="C&C Cooking Cabin.jpg"> Download Here</a>
 </center>
 <br>
 <br>
