--- a/Services.html
+++ b/Services.html
@@ -54,7 +54,7 @@
 <br/>
 <br/>
 
-<font color="White" face="Arial" size="">
+<font color="White" face="Arial">
 	Last Modified:
 	<script>document.write( document.lastModified );</script>
 </font>
