--- a/Products.html
+++ b/Products.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <body>
 <body bgcolor = "#d7cec7">
@@ -35,7 +36,7 @@
 
 <p><font color="#565656" face="arial" size="5"><strong>Apron</strong> - $30<img src="apron.jpeg" width="100" height="100"></font> </p>
 <p><font color="#565656" face="georgia">No kitchen is complete without a chef and their apron.  We have aprons of all sizes, so they will always fit!</p>
-	<a href="url">https://www.hedleyandbennett.com/ </a>
+	<a href="https://www.hedleyandbennett.com/" target="_blank">https://www.hedleyandbennett.com/</a>
 	<p>Click the link above and follow these steps to find the perfect apron:</p>
 <ol>
 	<li>Click 'Apron' at the top of the home page </li>
