--- a/Reviews.html
+++ b/Reviews.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head> 
 <center>
@@ -69,7 +70,7 @@
 </center>
 <br>
 <center>
-<a href = "https://www.foodnetwork.com/recipes/photos/foodnetwork-top-50-most-saved-recipes">Cooking Recipes</a>
+<a href = "https://www.foodnetwork.com/recipes/photos/foodnetwork-top-50-most-saved-recipes" target="_blank">Cooking Recipes</a>
 </center>
 <br>
 <br>
