--- a/Reviews.html
+++ b/Reviews.html
@@ -7,8 +7,8 @@
 </b>
 </center>
 </head>
-<br>
-<br>
+<br/>
+<br/>
 <body>
 <body bgcolor = "#D7CEC7">
 <center>
@@ -16,8 +16,8 @@
 <font color = "#565656"><font face = "Georgia"><font size = "4" > Our customers have shared their cooking stories! Please enjoy reading some of the amazing experiences our customers have had at Christie and Chris’s Cooking Cabin! </font></font></font>
 </i>
 </center>
-<br>
-<br>
+<br/>
+<br/>
 <h1> 
 <center>
   <font color = "White" ><font face = "Brush Script MT" ><font size = "14" > Our Customers </font></font></font>
@@ -26,20 +26,20 @@
 <u>
   <font color = "Black"><font face = "Arial"><font size = "6"> Betty Baker</font></font></font>
 </u>
-<br>
-<br>
+<br/>
+<br/>
 <font face "Georgia"><i> "My husband and I LOVED our cooking class! We learned how to properly prepare an authentic italian meal and it was absolutely delicious. I loved how much we learned in one class. We are definitely signing up again. Here is a picture of our lovely meal:" </i></font>
-<br>
+<br/>
 <center>
   <img src = "itailiandish.jpg" width = "250" height = "260"></img>
 </center>
-<br>
-<br>
+<br/>
+<br/>
 <u>
   <font color = "Black"><font face = "Arial"><font size = "6"> Ron Cooks</font></font></font>
 </u>
-<br>
-<br>
+<br/>
+<br/>
 <font face "Georgia"><i> "I had a marvelous time at Christie and Chris’s Cooking Cabin. I recieved a cooking class gift certificate for Christmas and could not wait to use it. The chef's who teach you are really kind and answered every question I had. I am going to bring my whole family with me next time! Don't think, book the classes!! Here are some great tips the chef told me to better prepare a rack of ribs:" </i></font>
 <ol>
 <i>
@@ -52,8 +52,8 @@
 <u>
 <font color = "Black"><font face = "Arial"><font size = "6"> Freddy Fryer</font></font></font>
 </u>
-<br>
-<br>
+<br/>
+<br/>
 <font face "Georgia"><i> "All I can say is <b> WOW!</b>. The cooking classes are awesome, but what really shocked me is that I could buy the cooking utinsels we used in the class right after. Really a great place to go for date night, entertainment, or just learning how to cook delicious meals. Very nice staff and the chef's are great in explaining exactly what to do. Highly Recommend. Here are some of the things I bought at the class:" </i></font>
 <ul>
 <i>
@@ -62,35 +62,35 @@
 <li><font face "Georgia"> Wooden Cutting Boards</font></li>
 </i>
 </ul>
-<br>
-<br>
-<br>
+<br/>
+<br/>
+<br/>
 <center>
 <font color = "#565656"><font face "Georgia"><font size = "4" > We want every one of customers to have a unqiue and personlized experience. Using the link below, you will find 50 recipes our chefs have mastered and are ready to teach YOU! Come with your top choice of recipe and our chefs will walk you through cooking it during one of the weeklong session days!</font></font></font>
 </center>
-<br>
+<br/>
 <center>
 <a href = "https://www.foodnetwork.com/recipes/photos/foodnetwork-top-50-most-saved-recipes" target="_blank">Cooking Recipes</a>
 </center>
-<br>
-<br>
+<br/>
+<br/>
 <center>
 <font color = "#565656"><font face "Georgia"><font size = "4" > We love receiving feedback from our customers. Please consider downloading this file, filling it out, and emailing it to us to tell us about your amazing experience at Christie and Chris’s Cooking Cabin!</font></font></font>
-<br>
-<br>
+<br/>
+<br/>
 <a href="mailto:mgospoda@purdue.edu">Email Us!</a>
-<br>
-<a href ="C&C Cooking Cabin.jpg"> Download Here</a>
+<br/>
+<a href ="C&C Cooking Cabin.jpg" target="_blank">Download Here</a>
 </center>
-<br>
-<br>
-<br>
+<br/>
+<br/>
+<br/>
 <p align="right">
 <font color="White" face="Arial">
   Last Modified:
   <script>document.write( document.lastModified );</script>
 </font>
 </p>
-<br>
+<br/>
 </body>
 </html>
