--- a/Products.html
+++ b/Products.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
-<body>
 <body bgcolor = "#d7cec7">
-<h1><center><font color="76323f" face="arial" size="+5">Christie and Chris' Cooking Cabin</h1></font></center>
-<h2><font color="c09f80" face="arial">Our Products</h2>
+<h1><center><font color="76323f" face="Arial" size="+5">Christie and Chris' Cooking Cabin</h1></font></center>
+<h2><font color="c09f80" face="Arial">Our Products</h2>
 <h4><u>Cookware</u></h4></font>
-<p><font face="georgia" color="#565656"><i>We guarantee high quality products at affordable prices.&nbsp; We promise you won't want to buy from anyone else!</i></font></p>
+<p><font face="Georgia" color="#565656"><i>We guarantee high quality products at affordable prices. We promise you won't want to buy from anyone else!</i></font></p>
 
-<p><font face="arial" color="#565656" size="5"><strong>Pots</strong> - $35 <img src="pot.jpeg" width="100" height="100"> </font></p>
-<p><font color="#565656" face="georgia">High quality, scratch resistent, and light weight.  Our pots will make cooking easy for anyone!</font></p>
+<p><font face="Arial" color="#565656" size="5"><strong>Pots</strong> - $35 <img src="pot.jpeg" width="100" height="100"> </font></p>
+<p><font color="#565656" face="Georgia">High quality, scratch resistent, and light weight.  Our pots will make cooking easy for anyone!</font></p>
 
-<p><font color="#565656" face="arial" size="5"><strong>Pots and pans (set)</strong> - $150<img src="pots.jpeg" width="150" height="100"> </font></p>
-<p><font color="#565656" face="georgia">A full set of our high quality pots.  Includes 5 different size pots made to fit your exact needs!</font></p>
+<p><font color="#565656" face="Arial" size="5"><strong>Pots and pans (set)</strong> - $150<img src="pots.jpeg" width="150" height="100"> </font></p>
+<p><font color="#565656" face="Georgia">A full set of our high quality pots.  Includes 5 different size pots made to fit your exact needs!</font></p>
 <ul>
-	<li><font color="#565656" face="georgia">1 large pot with lid</li>
+	<li><font color="#565656" face="Georgia">1 large pot with lid</li>
 	<li>1 medium pot with lid</li>
 	<li>1 small pot with lid</li>
 	<li>1 large pan with lid</li>
@@ -22,8 +21,8 @@
 </ul>
 
 
-<p><font color="#565656" face="arial" size="5"><strong>Utensils</strong> - $20<img src="utensils.jpeg" width="100" height="100"></font> </p>
-<p><font color="#565656" face="georgia">Spoons, whisks, spatulas, and more!  We have every utensil you will ever need for your kitchen adventures!</p>
+<p><font color="#565656" face="Arial" size="5"><strong>Utensils</strong> - $20<img src="utensils.jpeg" width="100" height="100"></font> </p>
+<p><font color="#565656" face="Georgia">Spoons, whisks, spatulas, and more!  We have every utensil you will ever need for your kitchen adventures!</p>
 <ul>
 	<li>1 soup ladel</li>
 	<li>1 slotted spatula</li>
@@ -34,8 +33,8 @@
 </ul>
 
 
-<p><font color="#565656" face="arial" size="5"><strong>Apron</strong> - $30<img src="apron.jpeg" width="100" height="100"></font> </p>
-<p><font color="#565656" face="georgia">No kitchen is complete without a chef and their apron.  We have aprons of all sizes, so they will always fit!</p>
+<p><font color="#565656" face="Arial" size="5"><strong>Apron</strong> - $30<img src="apron.jpeg" width="100" height="100"></font> </p>
+<p><font color="#565656" face="Georgia">No kitchen is complete without a chef and their apron.  We have aprons of all sizes, so they will always fit!</p>
 	<a href="https://www.hedleyandbennett.com/" target="_blank">https://www.hedleyandbennett.com/</a>
 	<p>Click the link above and follow these steps to find the perfect apron:</p>
 <ol>
@@ -44,8 +43,8 @@
 	<li>Scroll through the list of aprons to find the perfect one! </li>
 </ol></font>
 
-<p><font color="#565656" face="arial" size="5"><strong>Knives</strong> - $100<img src="knives.jpeg"width="150" height="100"> </p></font>
-<p><font color="#565656" face="georgia">Only the finest cutlery should be in your kitchen.  Our knives are guaranteed to make life easier!</p>
+<p><font color="#565656" face="Arial" size="5"><strong>Knives</strong> - $100<img src="knives.jpeg"width="150" height="100"> </p></font>
+<p><font color="#565656" face="Georgia">Only the finest cutlery should be in your kitchen.  Our knives are guaranteed to make life easier!</p>
 <ul>
 	<li>1 Bread Knife </li>
 	<li>1 Butcher Knife </li>
@@ -53,10 +52,10 @@
 	<li>1 Paring Knife</li></font>
 </ul>
 
-<p><font color="#565656" face="georgia">Check out what our customers have to say <a href="Christie and Chris.docx">here</a>!</p>
+<p><font color="#565656" face="Georgia">Check out what our customers have to say <a href="Christie and Chris.docx">here</a>!</p>
 
-<p><font color="#565656" face="georgia">Send us an <a href="mailto:bowyera@purdue.edu">email</a> if you have questions or concerns!</font></p>
+<p><font color="#565656" face="Georgia">Send us an <a href="mailto:bowyera@purdue.edu">email</a> if you have questions or concerns!</font></p>
 
-<p align="right"><font color="white" face="arial"> Last Modified:<script>document.write( document.lastModified );</script></font></p>
+<p align="right"><font color="white" face="Arial"> Last Modified:<script>document.write( document.lastModified );</script></font></p>
 </body>
 </html>
