--- a/MgmtTeam.html
+++ b/MgmtTeam.html
@@ -118,7 +118,7 @@
 				<li>Send your resume <i>in pdf format</i> 
 					(<a href="Resume_Michael Gospodarek.docx">example resume</a>)
 					to our management team's
-					<a href="mailto:mgospoda@purdue.edu">email</a></li>
+					<a href="mailto:fakeemail@gmail.com">email</a></li>
 				<li>Wait to hear back (estimated 1-2 weeks)</li>
 			</ol>
 			
