--- a/Products.html
+++ b/Products.html
@@ -54,7 +54,7 @@
 
 <p><font color="#565656" face="Georgia">Check out what our customers have to say <a href="Christie and Chris.docx">here</a>!</p>
 
-<p><font color="#565656" face="Georgia">Send us an <a href="mailto:bowyera@purdue.edu">email</a> if you have questions or concerns!</font></p>
+<p><font color="#565656" face="Georgia">Send us an <a href="mailto:fakeemail@gmail.com">email</a> if you have questions or concerns!</font></p>
 
 <p align="right"><font color="white" face="Arial"> Last Modified:<script>document.write( document.lastModified );</script></font></p>
 </body>
