--- a/Reviews.html
+++ b/Reviews.html
@@ -78,7 +78,7 @@
 <font color = "#565656"><font face "Georgia"><font size = "4" > We love receiving feedback from our customers. Please consider downloading this file, filling it out, and emailing it to us to tell us about your amazing experience at Christie and Chris’s Cooking Cabin!</font></font></font>
 <br/>
 <br/>
-<a href="mailto:mgospoda@purdue.edu">Email Us!</a>
+<a href="mailto:fakeemail@gmail.com">Email Us!</a>
 <br/>
 <a href ="C&C Cooking Cabin.jpg" target="_blank">Download Here</a>
 </center>
