--- a/Services.html
+++ b/Services.html
@@ -34,7 +34,7 @@
 </ul>
 
 <h2 style="font-family:Arial;color:#76323F"><b><u><center> Weeklong Classes</center></u></b></h2>
-<p style="color:#565656;font-family:Georgia;">Our weekly sessions run for an entire week, spanning <b>5 hours each day</b>. In these, you will go on a deep dive into cooking. You'll go beyond just understanding how to make dishes, but to be able to design your own courses of meals that pair well together. This service is very popular and hard to ensure a spot, so when they are available, <a href="mailto:chen3863@purdue.edu">click here to contact us right away</a>. The weeklong program has a maximum size of 12. </p>
+<p style="color:#565656;font-family:Georgia;">Our weekly sessions run for an entire week, spanning <b>5 hours each day</b>. In these, you will go on a deep dive into cooking. You'll go beyond just understanding how to make dishes, but to be able to design your own courses of meals that pair well together. This service is very popular and hard to ensure a spot, so when they are available, <a href="mailto:fakeemail@gmail.com">click here to contact us right away</a>. The weeklong program has a maximum size of 12. </p>
 
 <ol>
 	<li>Monday - Introduction to the kitchen</li>
