--- a/Reviews.html
+++ b/Reviews.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head> 
+<br/>
+<center>
+<img src="https://www.clipartmax.com/png/full/6-67609_transparent-chefs-hats-clipart-chef-hat-png.png" alt="CCCC Logo" width=100 height=75>
+<br/>
 <center>
 <b>
 <font color = "#76323F"><font face= "Arial"><font size = "12" > Our Customer Cooking Experiences </font></font></font>
