--- a/Products.html
+++ b/Products.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body bgcolor = "#d7cec7">
+<br/>
+<center>
+<img src="https://www.clipartmax.com/png/full/6-67609_transparent-chefs-hats-clipart-chef-hat-png.png" alt="CCCC Logo" width=100 height=75>
+<br/>
 <h1><center><font color="76323f" face="Arial" size="+5">Christie and Chris' Cooking Cabin</h1></font></center>
 <h2><font color="c09f80" face="Arial">Our Products</h2>
 <h4><u>Cookware</u></h4></font>
